loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:10: error: reassignment to val
  c=c+1;
   ^